--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -976,6 +976,20 @@ body.dark-theme {
   right: 0;
 }
 
+.loader{
+  position: fixed;
+  top:0; left:0; right:0; bottom: 0;
+  background-color: white;
+  z-index: 10000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader img{
+  width: 35rem;
+}
+
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
 @media screen and (max-width: 320px) {
